tests/test_proof/bad/output/dates_get_year-overlap.catala_en.Proof
[ERROR] [A.y] At least two exceptions overlap for this variable:
 --> tests/test_proof/bad/dates_get_year-overlap.catala_en
  | 
6 |   context y content boolean
  |           ^
  + Test
Counterexample generation is disabled so none was generated.
